src/test/deca/syntax/invalid/class/declaration/crossed_braces_10.deca
// Description:
//    Tests a syntactically incorrect program for a class with crossed braces
//
// Results:
//    Line 10 : Error, unmatched brace, expected a '{'.
//
// History:
//    created on 07/01/2025

}
class TestClass {